# rexplorer

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.tsx  global.css  icons.ts  main.ts  router.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
src/components/: ActionBar.tsx  InfoBar.tsx
src/composables/: rc.ts  states.ts
src/panels/: FilesPanel.tsx  HomePanel.tsx  RemotesPanel.tsx
