[package]
name = "rexplorer"
version = "0.1.0"
description = "Rclone GUI explorer"
authors = ["bsdayo <bsdayo@outlook.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rexplorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["macros", "process"] }
thiserror = "2.0.16"
tauri-plugin-log = "2"
log = "0.4.28"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
uuid = { version = "1.18.1", features = ["v4"] }
